# speculare-server

./: .env  .env.example  .env.exemple  .gitignore  Alerts.example.toml  CHANGELOG.md  Cargo.toml  Dockerfile  Example.toml  ExampleAlerts.toml  ExampleServer.toml  LICENSE  README.md  database_setup.sh  diesel.toml  release-please-config.json  server.example.config
.do/: app.yaml  deploy.template.yaml
.github/workflows/: ci.yml  clippy.yml  create-release.yaml  upload-to-release.yaml
alerts/: Cargo.toml  README.md  alerts.example.config  test_code.rs
alerts/src/: flow_check.rs  flow_run.rs  main.rs  routes.rs  server.rs
alerts/src/api/: alerts.rs  incidents.rs  mod.rs
alerts/src/utils/: alerts.rs  analysis.rs  check.rs  config.rs  hosts_changes.rs  impls.rs  mod.rs  monitoring.rs  pct.rs  query.rs  websocket.rs  ws_alerts.rs  ws_hosts.rs
alerts/src/utils/notifications/: mail.rs
alerts/src/utils/qtype/: mod.rs  pct.rs
alerts/templates/: escalate.html  incident.html
dashboard/: README.md  package.json  tailwind.config.js  vue.config.js
dashboard/public/: index.html
dashboard/src/: App.vue  main.js
dashboard/src/components/: CpuFreq.vue  DisksThroughput.vue  LineChart.vue  SteppedChart.vue
dashboard/src/router/: index.js
dashboard/src/store/: index.js
dashboard/src/views/: About.vue  Details.vue  Home.vue  NotFound.vue
dev_certs/: cert.pem  key.pem
migrations/2020-10-13-170858_add_data_sensors/: down.sql  up.sql
migrations/2020-10-24-211536_add_sensors_foreign_key/: down.sql  up.sql
migrations/2020-10-24-212123_add_disks_foreign_key/: down.sql  up.sql
migrations/2020-10-25-135910_add_loadavg_and_created_at/: down.sql  up.sql
migrations/2020-10-25-140420_add_loadavg_fkey/: up.sql
migrations/2020-10-25-141436_add_cpufreq_history/: down.sql  up.sql
migrations/2020-10-25-141606_add_cpufreq_fkey/: down.sql  up.sql
migrations/2020-12-15-170858_initital/: down.sql  up.sql
migrations/2021-04-25-173707_add_index/: down.sql  up.sql
migrations/2021-06-13-181030_add_partman_tables/: up.sql
migrations/2021-06-21-181604_drop_constraint/: down.sql  up.sql
migrations/2021-06-22-204658_update_cpustats/: down.sql  up.sql
migrations/2021-07-09-155817_add_alerts/: down.sql  up.sql
migrations/2021-07-15-145131_add_incidents/: down.sql  up.sql
migrations/2022-07-17-145132_remove_alerts/: down.sql
migrations/2022-07-17-145132_remove_alerts_copy/: up.sql
migrations/2023-02-19-145133_add_update_at/: down.sql  up.sql
migrations/2023-03-09-145249_add_aggregated_views/: down.sql  up.sql
migrations/2023-03-09-223658_add_policy_materialized_views/: down.sql  up.sql
migrations/2023-05-12-182005_add_active_alerts/: down.sql  up.sql
migrations/2023-05-21-171326_add_sync_interval/: down.sql  up.sql
server/: Cargo.toml  README.md  server.example.config
server/src/: flow_run.rs  main.rs  routes.rs  server.rs
server/src/api/: cpustats.rs  cputimes.rs  disks.rs  hosts.rs  ioblock.rs  ionet.rs  loadavg.rs  memory.rs  mod.rs  swap.rs
server/src/api/alerts/: incidents.rs  mod.rs
server/src/api/balerts/: alerts.rs  incidents.rs  mod.rs
server/src/auth/: cookiemiddleware.rs  mod.rs  validator.rs
server/src/utils/: config.rs
sproot/: Cargo.toml  README.md
sproot/src/: errors.rs  lib.rs
sproot/src/models/: mod.rs  schema.rs
sproot/src/models/alerts/: alerts.rs  http_models.rs  incidents.rs  mod.rs
sproot/src/models/balerts/: alerts.rs  incidents.rs
sproot/src/models/bauth/: apikeys.rs  customers_owning.rs  mod.rs
sproot/src/models/bserver/: cpustats.rs  cputimes.rs  disk.rs  http_models.rs  ionet.rs  loadavg.rs  memory.rs  mod.rs
sproot/src/models/server/: cpustats.rs  cputimes.rs  disk.rs  disks.rs  hosts.rs  http_models.rs  ioblock.rs  ionet.rs  loadavg.rs  memory.rs  mod.rs  swap.rs
src/: errors.rs  flow_run.rs  handlers.rs  lib.rs  logger.rs  main.rs  models.rs  models_db.rs  models_http.rs  routes.rs  schema.rs  server.rs  types.rs  validator.rs
src/api/: cpustats.rs  cputimes.rs  disks.rs  hosts.rs  ioblock.rs  iocounters.rs  ionet.rs  iostats.rs  loadavg.rs  memory.rs  mod.rs  swap.rs
src/api/balerts/: alerts.rs  incidents.rs  mod.rs
src/api/metrics/: cpustats.rs  disks.rs  hosts.rs  ioblock.rs  ionet.rs  loadavg.rs  mod.rs  swap.rs
src/auth/: alert_owned.rs  alerthostowned.rs  checkcookies.rs  checksessions.rs  cookiemiddleware.rs  mod.rs  sptk_validator.rs  sptkvalidator.rs  validator.rs
src/data/: db_helpers.rs  mod.rs  models_db.rs  models_http.rs
src/data_func/: db_helpers.rs  mod.rs
src/end_api/: auth.rs  get_all.rs  get_all_host.rs  get_details_one.rs  get_one.rs  mod.rs  post_one.rs
src/endpoints/: auth_me.rs  get_all_host.rs  get_details_one.rs  mod.rs  one_host.rs  post_one.rs
src/handlers/: mod.rs
src/handlers/cpu/: mod.rs  routes.rs
src/handlers/disks/: routes.rs
src/handlers/hosts/: mod.rs  models.rs  routes.rs
src/handlers/memory/: routes.rs
src/models/: cpuinfo.rs  cpustats.rs  cputimes.rs  disks.rs  hosts.rs  http_models.rs  ioblock.rs  iocounters.rs  ionet.rs  iostats.rs  loadavg.rs  memory.rs  mod.rs  schema.rs  swap.rs
src/s_server/: mod.rs  server.rs
src/s_server/api/: cpustats.rs  cputimes.rs  disks.rs  hosts.rs  ioblock.rs  ionet.rs  loadavg.rs  memory.rs  swap.rs
src/utils/: config.rs  database.rs  mod.rs
