[package]
name = "speculare-server"
version = "0.0.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sproot = { git = "https://github.com/speculare-cloud/sproot" }
actix-cors = { version = "0.6" }
actix-session = { version = "0.7", features = ["cookie-session"], optional = true }
actix-web = { version = "4.2", features = ["rustls"] }
clap = { version = "3.2", features = ["derive"] }
clap-verbosity-flag = "1.0"
chrono = { version = "0.4", features = ["serde"] }
config = "0.13"
diesel = { version = "2.0", features = ["postgres", "r2d2", "chrono"] }
diesel_migrations = "2.0"
futures-util = "0.3"
log = "0.4"
moka = { version = "0.9", features = ["future"], optional = true }
once_cell = "1.14"
r2d2 = "0.8"
serde = { version = "1.0", features = ["derive"] }
sys_metrics = { git = "https://github.com/Martichou/sys_metrics" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.1", features = ["v4"] }

[features]
default = ["auth"]
auth = ["actix-session", "moka"]

[profile.release]
lto = true
opt-level = 3
codegen-units = 1