[package]
name = "alerts"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sproot = { version = "0.1.0", path = "../sproot" }
actix-cors = { version = "0.6.0-beta.2" }
actix-web = { version = "4.0.0-beta.8", features = ["openssl"] }
chrono = { version = "0.4", features = ["serde"] }
config = "0.11"
diesel = { version = "1.4", features = ["postgres", "r2d2", "chrono"] }
diesel_migrations = "1.4"
env_logger = "0.8"
evalexpr = "6.2"
lazy_static = "1.4"
log = "0.4"
openssl = { version = "0.10" }
r2d2 = "0.8"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.8", features = ["full"] }