[package]
name = "sproot"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.0.0-beta.8", features = ["rustls"] }
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1.4", features = ["postgres", "r2d2", "chrono"] }
env_logger = "0.9"
log = "0.4"
r2d2 = "0.8"
rustls = "0.19"
serde = { version = "1.0", features = ["derive"] }
snmalloc-rs = "0.2"